service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
